test/corpus/attributes.txt
==========
Attributes
==========

[Annotation]
[GIR (name = "attrs", some_property = false), PrintfFormat]
namespace Attributes {
}

---

(source_file
  (namespace_member
    (attribute
      (identifier))
    (attribute
      (identifier)
      (attribute_argument
        (identifier)
        (string))
      (attribute_argument
        (identifier)
        (boolean)))
    (attribute
      (identifier))
    (namespace_declaration
      (symbol
        (identifier)))))
